welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: not found: value compteurCouleur
  compteurCouleur = 0
  ^MethodsPicture:26: error: not found: value compteurCouleur
    compteurCouleur match{
    ^MethodsPicture:32: error: not found: value compteurCouleur
    compteurCouleur = compteurCouleur + 1 
    ^